# ProjectSentinel

./: .gitignore
.github/: copilot-instructions.md
.github/workflows/: ci.yml
admin-app/: gradlew.bat  settings.gradle.kts
admin-app/app/: build.gradle.kts  proguard-rules.pro
admin-app/data/: build.gradle.kts
admin-app/data/src/main/cpp/: CMakeLists.txt  opus_decoder_jni.cpp
admin-app/service/: build.gradle.kts
docs/:  CURRENT_STATE.md  AI_INSTRUCTIONS.md  API.md  ARCHITECTURE.md  BACKEND_STATUS.md  CLAUDE.md  CODING_STANDARDS.md  DATABASE.md  DECISIONS.md  KNOWN_GOOD_STATE.md  NEXT_SPRINT.md  PERFORMANCE.md  PROTOCOL.md  ROADMAP.md  SECURITY.md  TECH_DEBT.md  TESTING.md
host-app/: build.gradle.kts  settings.gradle.kts
host-app/app/: build.gradle.kts  proguard-rules.pro
host-app/data/: build.gradle.kts
host-app/data/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
host-app/domain/: build.gradle.kts
host-app/service/: build.gradle.kts
server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  render.yaml
server/cmd/server/: main.go
server/internal/admin/: handler.go  handler_test.go  service.go  service_test.go
server/internal/app/: application.go
server/internal/audio/: frame.go  handler.go  service.go  service_test.go
server/internal/auth/: error.go  handler.go  jwt.go  service.go  service_test.go
server/internal/bootstrap/: bootstrap.go  bootstrap_test.go
server/internal/config/: config.go  config_test.go
server/internal/database/: redis.go  redis_test.go
server/internal/device/: handler.go  service.go  service_test.go
server/internal/dispatcher/: broadcast_test.go  dispatcher.go  dispatcher_test.go
server/internal/file/: handler.go  service.go
server/internal/gateway/: client.go  gateway.go  heartbeat.go  manager.go  manager_admin_test.go  observability.go  session.go  session_admin_test.go  upgrader.go  websocket_integration_test.go  writer.go
server/internal/health/: service.go  service_test.go
server/internal/heartbeat/: handler.go  service.go  service_test.go
server/internal/location/: handler.go  service.go  service_test.go
server/internal/logger/: logger_test.go
server/internal/metrics/: collector.go  collector_test.go
server/internal/protocol/: auth.go  device_update.go  error.go  ping.go  (+9 more)
tools/token-generator/: go.mod  main.go
(+187 files in other folders)
